--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <div id="step4" class="step">
       <button class="btn back"><svg width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="#FFD700" stroke-width="3"><path d="M19 12H5M12 19l-7-7 7-7"/></svg></button>
       <p class="msg">Which Parish?</p>
-      <div id=“parish-options"></div>
+      <div id="parish-options"></div>
       <button class="btn gold" id="parishNext" style="display:none;">Next</button>
     </div>
 
