--- a/index.html
+++ b/index.html
@@ -52,6 +52,33 @@
     .btn.green{background:var(--green);color:#fff;}
     .btn.back{position:absolute;top:1rem;left:1rem;background:none;padding:0.5rem;z-index:20;}
     input,select{width:100%;padding:1rem;margin:0.6rem 0;border-radius:16px;border:none;background:rgba(255,255,255,0.15);color:#fff;font-size:1.1rem;}
+ .btn.gold, .btn.green {
+  font-size: 1.25rem !important;
+  padding: 1rem 1.5rem !important;
+  margin: 0.8rem 0 !important;
+}
+  .option-card {
+  background: rgba(0,0,0,0.65) !important;
+  backdrop-filter: blur(4px);
+  border: 2px solid rgba(255,215,0,0.3);
+}
+.option-card.selected {
+  background: rgba(255,215,0,0.25) !important;
+  border-color: var(--gold) !important;
+  box-shadow: 0 0 20px rgba(255,215,0,0.5);
+}
+    #summary-items {
+  background: rgba(0,0,0,0.7);
+  padding: 1.5rem;
+  border-radius: 16px;
+  margin: 1.5rem 0;
+  border: 1px solid rgba(255,215,0,0.3);
+}
+#summary-items div {
+  font-size: 1.25rem !important;
+  padding: 0.9rem 0 !important;
+  color: #fff !important;
+}
   </style>
 </head>
 <body>
@@ -166,10 +193,12 @@
       <p class="msg">Your YaadVibe Package</p>
       <div id="summary-items" style="margin:2rem 0;font-size:1.2rem;"></div>
       <div class="calculator">Total: $<span id="total">0.00</span></div>
-      <button class="btn gold" id="btnPay" style="display:none;margin:1.5rem 0;">Pay with TON Wallet</button>
-      <button class="btn green" id="btnTip" style="display:none;font-size:1.5rem;padding:1.4rem;">
-        Tip di Vibe $5
-      </button>
+      <button class="btn gold" id="btnPay" style="display:none; font-weight:900; letter-spacing:1px; margin:1.5rem 0;">
+  PAY WALLETCONNET
+</button>
+      <button class="btn green" id="btnTip" style="display:none; transform:scale(0.25); transform-origin:center;">
+  🔥Tip 💰🔥
+</button>
       <div id="qr-area" style="margin:2rem 0;"></div>
     </div>
   </div>
@@ -198,6 +227,9 @@ document.addEventListener('DOMContentLoaded', () => {
     if(state.flight)total+=state.flight.price;
     document.getElementById('liveTotal').textContent=total.toFixed(2);
     document.getElementById('total').textContent=total.toFixed(2);
+  document.getElementById('liveTotal').style.animation = 'none';
+setTimeout(() => 
+  document.getElementById('liveTotal').style.animation = 'fyahPulse 0.6s ease-in-out', 10);
   };
 
   // FIX 5: Make sure parishes reload when going BACK to step 4
