--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
       <div id="summary-items" style="margin:2rem 0;font-size:1.2rem;"></div>
       <div class="calculator">Total: $<span id="total">0.00</span></div>
       <button class="btn gold" id="btnPay" style="display:none; font-weight:900; letter-spacing:1px; margin:1.5rem 0;">PAY WITH TON WALLET</button>
-      <button class="btn green" id="btnTip" style="display:none; font-size:1.1rem; padding:0.8rem;">Tip di Vibe $5</button>
+      <button class="btn green" id="btnTip" style="display:none; font-size:1.1rem; padding:0.8rem;">🔥TIP💰🔥/button>
       <div id="qr-area" style="margin:2rem 0;"></div>
     </div>
   </div>
