--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ document.addEventListener('DOMContentLoaded', () => {
   const updateProgress = () => {
     const p = document.getElementById('progress');
     p.innerHTML = '';
-    const icons = ['Start','Suitcase','Plane','Calendar','Location','Wave','Bed','Taxi','Ticket','Shopping Cart'];
+    const icons = ['🌏','🧳','✈️','📅','📍','🌊','🛏️','🚕','🎫','🛒'];
     icons.forEach((e,i) => {
       const s = document.createElement('span');
       s.textContent = e;
