--- a/index.html
+++ b/index.html
@@ -68,25 +68,32 @@
     .option-card.selected{background:rgba(255,215,0,0.25)!important;border-color:var(--gold)!important;box-shadow:0 0 20px rgba(255,215,0,0.5);}
     #summary-items{background:rgba(0,0,0,0.7);padding:1.5rem;border-radius:16px;margin:1.5rem 0;border:1px solid rgba(255,215,0,0.3);}
     #summary-items div{font-size:1.25rem!important;padding:0.9rem 0!important;color:#fff!important;}
-  /* CLEAN BACK BUTTON - fixed top-right, no interference */
 .btn.back {
   position: fixed !important;
-  top: 18px !important;
-  right: 16px !important;
-  background: rgba(0,0,0,0.4) !important;
-  backdrop-filter: blur(8px);
+  top: 14px !important;
+  right: 14px !important;
+  background: rgba(0,0,0,0.5) !important;
+  backdrop-filter: blur(10px);
   border-radius: 50% !important;
-  width: 50px !important;
-  height: 50px !important;
+  width: 62px !important;
+  height: 62px !important;
   display: flex !important;
   align-items: center !important;
   justify-content: center !important;
   z-index: 9999 !important;
-  border: 2px solid rgba(255,215,0,0.5) !important;
-  box-shadow: 0 4px 15px rgba(0,0,0,0.6) !important;
+  border: 3px solid #FFD700 !important;
+  box-shadow: 0 0 25px rgba(255,215,0,0.7) !important;
   transition: all 0.3s !important;
 }
-.btn.back:hover { transform: scale(1.1); }
+.btn.back svg {
+  width: 36px !important;
+  height: 36px !important;
+  stroke-width: 3.5 !important;
+}
+.btn.back:hover {
+  transform: scale(1.15);
+  background: rgba(255,215,0,0.2) !important;
+}
   </style>
 </head>
 <body>
