--- a/index.html
+++ b/index.html
@@ -94,6 +94,15 @@
   transform: scale(1.15);
   background: rgba(255,215,0,0.2) !important;
 }
+    #summary-items div {
+  display: flex !important;
+  justify-content: space-between !important;
+  padding: 1rem 0 !important;
+  border-bottom: 1px solid rgba(255,215,0,0.3) !important;
+  font-size: 1.35rem !important;
+}
+#summary-items div:last-child { border-bottom: none !important; }
+#summary-items strong { color: #FFD700 !important; font-size: 1.4rem !important; }
   </style>
 </head>
 <body>
