--- a/index.html
+++ b/index.html
@@ -115,7 +115,9 @@
 
     <div id="step0" class="step active">
       <p class="msg">Ready fi di Yaad?</p>
-      <button class="btn gold" id="startBtn">Start Booking</button>
+      <button class="btn gold" id="startBtn" style="padding:1.4rem !important; font-size:1.6rem !important; border-radius:99px !important; box-shadow:0 8px 25px rgba(255,215,0,0.4) !important;">
+  Start Booking
+</button>
     </div>
 
     <div id="step1" class="step">
