--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
     <div id="step0" class="step active">
       <p class="msg">Ready fi di Yaad?</p>
-      <button class="btn gold" id="startBtn" style="padding:1.4rem !important; font-size:1.6rem !important; border-radius:99px !important; box-shadow:0 8px 25px rgba(255,215,0,0.4) !important;">
+      <button class="btn gold" id="startBtn">
   Start Booking
 </button>
     </div>
@@ -243,10 +243,10 @@
       <p class="msg">Your YaadVibe Package</p>
       <div id="summary-items" style="margin:2rem 0;font-size:1.2rem;"></div>
       <div class="calculator">Total: $<span id="total">0.00</span></div>
-      <button class="btn gold" id="btnPay" style="display:none; padding:1rem !important; font-size:1.4rem !important; margin:1.2rem 0 !important;">
+      <button class="btn gold" id="btnPay">
   PAY TON WALLET
 </button>
-<button class="btn green" id="btnTip" style="display:none; padding:0.9rem !important; font-size:1.25rem !important;">
+<button class="btn green" id="btnTip">
   🔥TIP💰🔥
 </button>
       <div id="qr-area" style="margin:2rem 0;"></div>
