--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     <div id="progress"></div>
 
     <div id="step0" class="step active">
-      <p class="msg">Ready fi di Yaad?</p>
+      <p class="msg">Book Package?</p>
       <button class="btn gold" id="startBtn">
   Start Booking
 </button>
@@ -153,19 +153,19 @@
 
     <div id="step1" class="step">
       <button class="btn back"><svg width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="#FFD700" stroke-width="3"><path d="M19 12H5M12 19l-7-7 7-7"/></svg></button>
-      <p class="msg">Ya local?</p>
-      <div class="option-card" data-value="yes"><div class="info"><div class="name">Yes, local</div></div></div>
-      <div class="option-card" data-value="no"><div class="info"><div class="name">No, coming in</div></div></div>
+      <p class="msg">Traveling?</p>
+      <div class="option-card" data-value="yes"><div class="info"><div class="name">Local</div></div></div>
+      <div class="option-card" data-value="no"><div class="info"><div class="name">Visiting</div></div></div>
     </div>
 
     <div id="step2" class="step">
       <button class="btn back"><svg width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="#FFD700" stroke-width="3"><path d="M19 12H5M12 19l-7-7 7-7"/></svg></button>
-      <p class="msg">Where you flying from?</p>
+      <p class="msg">Where are you departing from?</p>
       <select id="fromCity">
-        <option value="">Choose city...</option>
+        <option value="">Choose city</option>
         <optgroup label="Jamaica">
-          <option value="kingston">Kingston (KIN)</option>
-          <option value="montego-bay">Montego Bay (MBJ)</option>
+          <option value="kingston">Kingston NMIA</option>
+          <option value="montego-bay">Montego Bay MBJ</option>
         </optgroup>
         <optgroup label="Foreign">
           <option value="new-york">New York (JFK)</option>
@@ -180,9 +180,9 @@
 
     <div id="step25" class="step">
       <button class="btn back"><svg width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="#FFD700" stroke-width="3"><path d="M19 12H5M12 19l-7-7 7-7"/></svg></button>
-      <p class="msg">Choose Flight (or skip)</p>
+      <p class="msg">Choose a Flight</p>
       <div id="flight-options"></div>
-      <div class="option-card" data-flight="skip"><div class="info"><div class="name">Skip (I’ll book later)</div></div></div>
+      <div class="option-card" data-flight="skip"><div class="info"><div class="name">Skip</div></div></div>
       <button class="btn gold" id="btnFlight">Next</button>
     </div>
 
@@ -204,7 +204,7 @@
 
     <div id="step4" class="step">
       <button class="btn back"><svg width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="#FFD700" stroke-width="3"><path d="M19 12H5M12 19l-7-7 7-7"/></svg></button>
-      <p class="msg">Which Parish?</p>
+      <p class="msg">Parish?</p>
       <div id="parish-options"></div>
       <button class="btn gold" id="parishNext" style="display:none;">Next</button>
     </div>
@@ -226,14 +226,14 @@
 
     <div id="step7" class="step">
       <button class="btn back"><svg width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="#FFD700" stroke-width="3"><path d="M19 12H5M12 19l-7-7 7-7"/></svg></button>
-      <p class="msg">Add Transport (optional)</p>
+      <p class="msg">Transportation</p>
       <div id="transport-options"></div>
       <button class="btn gold" id="btnTransport">Next</button>
     </div>
 
     <div id="step8" class="step">
       <button class="btn back"><svg width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="#FFD700" stroke-width="3"><path d="M19 12H5M12 19l-7-7 7-7"/></svg></button>
-      <p class="msg">Add Tours (optional)</p>
+      <p class="msg">Tours</p>
       <div id="tour-options"></div>
       <button class="btn gold" id="btnTours">Show My Package</button>
     </div>
