--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       position:fixed;top:16px;left:16px;width:110px;height:74px;
       background:url('/IMG_0454.png') center/cover no-repeat;
       animation:waveFlow 3s ease-in-out infinite;z-index:10;border-radius:6px;
-      box-shadow:0 4px 12px rgba(0,0,0,0.5);
+      box-shadow:0 4px 12px rgba(0,0,0,0.5);pointer-events: none;
     }
     .flag::after{
       content:"1Drop";font-weight:900;font-size:1.35rem;
