--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       color:#fff;text-shadow:0 0 8px #000;
     }
     @keyframes waveFlow{0%,100%{transform:rotate(0deg) scale(1);}50%{transform:rotate(2.5deg) scale(1.03);}}
-    .container{position:relative;z-index:2;max-width:480px;margin:0 auto;padding:1rem;display:flex;flex-direction:column;min-height:100dvh;pointer-event: auto;}
+    .container{position:relative;z-index:2;max-width:480px;margin:0 auto;padding:1rem;display:flex;flex-direction:column;min-height:100dvh;pointer-events:auto;}
     .logo{font-family:'Changa One',cursive;font-size:clamp(4.8rem,17vw,7.5rem);font-weight:900;letter-spacing:-3px;text-align:center;margin:2rem 0 0.5rem;}
     .logo span:first-child{background:linear-gradient(135deg,#FF4500,#DC143C);-webkit-background-clip:text;-webkit-text-fill-color:transparent;filter:drop-shadow(0 0 20px #FF4500);}
     .logo span:last-child{background:linear-gradient(135deg,#FFD700,#FFC107);-webkit-background-clip:text;-webkit-text-fill-color:transparent;filter:drop-shadow(0 0 25px #FFD700);}
@@ -109,7 +109,7 @@
 #startBtn {
   padding: 1rem !important;
   font-size: 1.35rem !important;
-  border-radius: 99px;pointer-event: auto;
+  border-radius: 99px;pointer-events: auto;
 }
 
 /* Smaller + / − buttons in step3 */
